リンクに卒研支援ページへのリンクを追加

--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@ input{
 	<li ><input type="checkbox" id="1" /><label for="1">情報物理研究室</label>
 
 		<ul >
+            <li><a href="http://buturi.heteml.jp/student/2015/misawa/test/attendance/index.php" target="blank">2015年度情報物理教室卒研支援ページ</a></li>
 			<li><a href="https://twitter.com/j_b_2015" target="blank">2015年度情報物理教室Twitter</a></li>
 			<li><a href="http://buturi.heteml.jp/student/2014/" target="blank">2014年度情報物理教室</a></li>
 			<li><a href="http://buturi.heteml.jp/student/2013/" target="blank">2013年度情報物理教室</a></li>
