--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
     <section id="state">
         <a href="http://buturi.heteml.jp/student/2015/misawa/test/attendance/topstate.php" target="_blank">
-        <iframe width="100%" height="600" src="http://buturi.heteml.jp/student/2015/misawa/test/attendance/topstate.php" scrolling="no"
+        <iframe width="1000" height="600" src="http://buturi.heteml.jp/student/2015/misawa/test/attendance/topstate.php" scrolling="auto"
  frameborder="0"></iframe>
         <!--相対パス"./misawa/test/attendance/topstate.php"-->
         </a>
